Fix ordering: deploy puppetserver first so that it generates certificates first

--- a/code/hieradata/puppet.yaml
+++ b/code/hieradata/puppet.yaml
@@ -1,4 +1,4 @@
 ---
 classes                           :
-                                    - puppetserver
+                                    - role::puppetserver
 
