--- a/code/environments/production/environment.conf
+++ b/code/environments/production/environment.conf
@@ -10,7 +10,7 @@
 
 # Allowed settings and default values:
 
-# modulepath = ./modules:$basemodulepath
+modulepath = modules:site:$basemodulepath
 # manifest = (default_manifest from puppet.conf, which defaults to ./manifests)
 # config_version = (no script; Puppet will use the time the catalog was compiled)
 # environment_timeout = (environment_timeout from puppet.conf, which defaults to 0)
